# wolf3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  auteur  bonus  map  wolf3d.h
frameworks/: ._SDL2.framework
includes/: defines.h  floor.h  level.h  struct.h  wolf3d.h
libft/: .gitignore  Makefile  README.md  libft.h
libft/is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_isprint.c
libft/lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelete.c  ft_lstdelone.c  ft_lstend.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
libft/memory/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/print/: ft_perror.c  ft_putchar.c  ft_putchar_fd.c  ft_putcolor.c  ft_putcolor_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_puterror.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
libft/string/: ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
libft/unclassed/: ft_atoi.c  ft_digitlen.c  ft_itoa.c  ft_tolower.c  ft_toupper.c  get_next_line.c
misc/: map  map.w3d
sources/: main.c
sources/destroy/: destroy_sdl.c
sources/draw/: draw_background.c  draw_floor.c  draw_vertical.c  draw_wall.c
sources/event/: check_move.c  key_hook.c  keyup_hook.c  wait_event.c  window_event.c
sources/init/: init_cam.c  init_camera.c  init_dda.c  init_game.c  init_ray.c  init_sdl.c  init_window.c
sources/level/: convert_file.c  get_map.c  level.c  level.h  read_file.c
sources/logic/: dda.c  game_loop.c  raycasting.c
sources/logic/move/: move_down.c  move_up.c
sources/logic/rotate/: rotate_left.c  rotate_right.c
sources/tools/: get_pixel.c
