CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
PROJECT(wolf3d)

#COMPILERS CONFIGURATION
SET(CMAKE_C_COMPILER "/usr/bin/clang")
SET(CMAKE_C_FLAGS "-Wall -Wextra -Werror")

#EXECUTABLE FILES
SET(EXEC_FILE sources/main.c
		sources/level/level.c
		sources/draw/draw_vertical.c sources/draw/draw_background.c sources/init/init_camera.c)

#INCLUDES DIRECTORIES
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(libft)
INCLUDE_DIRECTORIES(SDL2.framework/Headers)

#LIBFT MAKEFILE CALL
ADD_CUSTOM_COMMAND(
		OUTPUT ${PROJECT_SOURCE_DIR}/libft/libft.a
		COMMAND make
		WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/libft
)
ADD_CUSTOM_TARGET(
		libft
		DEPENDS ${PROJECT_SOURCE_DIR}/libft/libft.a
)

#MACOS X FRAMEWORK
#FIND_LIBRARY(SDL2 SDL2)
#FIND_LIBRARY(APPKIT AppKit)

#EXECUTABLES
ADD_EXECUTABLE(wolf3d ${EXEC_FILE})

#DEPENDENCIES
ADD_DEPENDENCIES(wolf3d libft)

#LIBRARIES LINKING
TARGET_LINK_LIBRARIES(wolf3d ${PROJECT_SOURCE_DIR}/libft/libft.a)
TARGET_LINK_LIBRARIES(wolf3d ${SDL2})
